--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.2.1'
     implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
+    implementation 'net.steamcrafted:materialiconlib:1.1.5'
 
 }
