--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'net.steamcrafted:materialiconlib:1.1.5'
+    implementation 'com.github.florent37:singledateandtimepicker:2.2.7'
 
 }
