--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,12 @@ dependencies {
     implementation 'net.steamcrafted:materialiconlib:1.1.5'
     implementation 'com.github.florent37:singledateandtimepicker:2.2.7'
     implementation "androidx.cardview:cardview:1.0.0"
+    //noinspection GradleCompatible
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation 'com.google.firebase:firebase-database:19.6.0'
+    implementation 'com.google.firebase:firebase-core:18.0.0'
+
+
+
 
 }
